--- a/index.html
+++ b/index.html
@@ -76,7 +76,9 @@
                 </div>
             </div>
         </section>
+        <!-- Second History Ends -->
 
+        <!-- Third History Starts -->
         <section class="section_4">
             <div class="box">
                 <h1 class="judul">Peristiwa Rengasdengklok</h1>
@@ -106,15 +108,39 @@
                 <img src="img/section_4/teks-proklamasi.jpg" alt="" />
             </div>
         </section>
+        <!-- Third History Ends -->
 
+        <!-- Forth History Starts -->
         <section class="section_5">
-            <img src="img/section_4/soekarno.png" alt="" />
-            <div class="audio">
-                <audio controls src="audio/proklamasi.mp3"></audio>
-                <img src="img/section_4/play.png" alt="" />
+            <div class="bendera">
+                <div class="flag"></div>
+                <svg>
+                    <filter id="wavy">
+                        <feTurbulence x="0" y="0" baseFrequency="0.01" numOctaves="5" seed="2">
+                            <animate attributeName="baseFrequency" dur="60s" values="0.0.2;0.05;0.02" repeatCount="indefinite"></animate>
+                        </feTurbulence>
+                        <feDisplacementMap in="SourceGraphic" scale="30"></feDisplacementMap>
+                    </filter>
+                </svg>
+            </div>
+            <div class="proklamasi">
+                <img src="img/section_4/soekarno.png" alt="" />
+                <div class="audio">
+                    <audio controls src="audio/proklamasi.mp3" id="myAudio"></audio>
+                    <button id="toggleButton">
+                        <img src="img/section_4/play.png" alt="" id="playImg" />
+                    </button>
+                </div>
+                <div class="gallery-container">
+                    <img class="image active" src="img/section_4/foto1.jpg" alt="Image 1" />
+                    <img class="image active" src="img/section_4/foto2.jpg" alt="Image 2" />
+                    <img class="image active" src="img/section_4/foto3.jpg" alt="Image 3" />
+                    <img class="image active" src="img/section_4/foto4.jpg" alt="Image 4" />
+                    <img class="image active" src="img/section_4/foto5.jpg" alt="Image 5" />
+                </div>
             </div>
         </section>
-        <!-- Second History Ends -->
+        <!-- Forth History Ends -->
 
         <script src="js/script.js"></script>
     </body>
