--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
             </div>
         </section>
         <!-- Forth History Ends -->
-
+        <section class="copyright">&copy; Copyright <span> Independence Day.</span> All Right Reserved.</section>
         <script src="js/script.js"></script>
     </body>
 </html>
