--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
         <link rel="shortcut icon" href="img/logo.ico" type="image/x-icon" />
     </head>
     <body>
+        <nav>
+            <img src="img/section_4/78.png" alt="" />
+        </nav>
+
         <!-- First Section Starts -->
         <section class="section_1">
             <div class="layer">
