--- a/index.html
+++ b/index.html
@@ -16,8 +16,10 @@
             <img src="img/section_4/78.png" alt="" />
         </nav>
 
+        <a href="#section_1" class="panah">&uarr;</a>
+
         <!-- First Section Starts -->
-        <section class="section_1">
+        <section class="section_1" id="section_1">
             <div class="layer">
                 <img src="img/section_1/layer_1.png" alt="layer_1" />
                 <img src="img/section_1/layer_2.png" alt="layer_2" />
